--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "php": ">=5.6.0",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap4": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0"
+        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
+        "phpoffice/phpexcel": "^1.8"
+        
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -30,7 +32,8 @@
         "codeception/module-filesystem": "^1.0.0",
         "codeception/module-yii2": "^1.0.0",
         "codeception/module-asserts": "^1.0.0",
-        "phpoffice/phpspreadsheet": "1.23.0"
+        "phpoffice/phpspreadsheet": "1.23.0",
+        "rector/rector": "^0.14.5"
     },
     "config": {
         "process-timeout": 1800,
@@ -66,6 +69,7 @@
             ]
         }
     },
+    
     "repositories": [
         {
             "type": "composer",
